# chess

./: .dir-locals.el  .directory  .ghci  .gitignore  Application.hs  Foundation.hs  GPATH  GRTAGS  GTAGS  README.md  chess.cabal  package.yaml  stack.yaml
Handler/: Game.hs  Home.hs  Move.hs  NewGame.hs
app/: devel.hs
app/Chess/: TestUtils.hs
app/Chess/Core/: DebugUtils.hs  Domain.hs  Moves.hs
app/Chess/Core/Domain/: Base.hs  Board.hs  Coord.hs  Foundation.hs  GameState.hs  Move.hs  Piece.hs  Player.hs  Space.hs
app/Chess/Core/Logic/: BoardBuilder.hs  GameStatePersistence.hs  Moves.hs
app/static/js/: chess-controller.js  chess-model.js
config/: client_session_key.aes  keter.yml  routes
src/: Application.hs  Foundation.hs  Import.hs  Main.hs
src/Chess/: Imports.hs  TestUtils.hs
src/Chess/Core/: Domain.hs  Moves.hs  Serialization.hs
src/Chess/Core/Domain/: Base.hs  Board.hs  Coord.hs  Foundation.hs  GameState.hs  Move.hs  Piece.hs  Player.hs  Space.hs
src/Chess/Core/Logic/: GameStatePersistence.hs  Moves.hs
src/Handler/: Game.hs  Home.hs  Move.hs
src/static/css/: chess.css
src/static/html/: index.html
src/static/js/: chess-controller.js  chess-model.js  chess-react.js
src/static/js/lib/: nerve.js
static/css/: chess.css
static/html/: index.html
static/js/: chess-model.js  chess-react.js
templates/: homepage.hamlet  homepage.julius  view-game.julius
test/: 4-player-infinite-loop.txt
test/Chess/Core/: DomainSpec.hs  MovesSpec.hs
test/Chess/Core/Domain/: DomainSpec.hs
test/Chess/Core/Logic/: BoardBuilderSpec.hs  GameStateSpec.hs  MovesSpec.hs
test/Handler/: HomeSpec.hs  MoveSpec.hs  NewGameSpec.hs
test/Performance/: BaseSpec.hs
