name:                chess
version:             0.1.0.0
synopsis:            Initial attempt at a chess playing game.
description:         Please see README.md
homepage:            https://github.com/kyllerss/chess
license:             BSD3
license-file:        LICENSE
author:              Kyle L.
maintainer:          klomeli@gmail.com
copyright:           2016 Kyle L.
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable chess
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , aeson
                     , bytestring
                     , containers
                     , hspec >= 2.2
  extensions:          DuplicateRecordFields
                     , DeriveGeneric
                     , OverloadedStrings
test-suite hspec
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  build-depends: base
               , hspec
               , QuickCheck
  hs-source-dirs: test
  default-language: Haskell2010
