name:                chess
version:             0.1.0.0
synopsis:            Initial attempt at a chess playing game.
description:         Please see README.md
homepage:            https://github.com/kyllerss/chess
license:             BSD3
license-file:        LICENSE
author:              Kyle L.
maintainer:          klomeli@gmail.com
copyright:           2016 Kyle L.
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Chess.Core.Domain
                       Chess.Core.Serialization
                       Chess.Core.Moves
  build-depends:       base >= 4.7 && < 5
                     , text
                     , aeson
                     , bytestring
                     , containers
  default-language:    Haskell2010
  default-extensions: DuplicateRecordFields
                    , DeriveGeneric
                    , OverloadedStrings
                    , DisambiguateRecordFields
                    
executable chess-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , chess
                     , text
                     , aeson
                     , bytestring
                     , containers
                     , hspec >= 2.2
  default-language:    Haskell2010
  default-extensions: DuplicateRecordFields
                    , DeriveGeneric
                    , OverloadedStrings
                    , DisambiguateRecordFields
                    
test-suite chess-test
  main-is:          Spec.hs
  type:             exitcode-stdio-1.0
  build-depends:    base
                  , containers
                  , hspec
                  , QuickCheck
                  , chess
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
  default-extensions: DuplicateRecordFields
                    , DeriveGeneric
                    , OverloadedStrings
                    , DisambiguateRecordFields
                    